Add html content (section footer bottom)

--- a/index.html
+++ b/index.html
@@ -221,7 +221,21 @@
       </div>
       <div class="footer-bottom">
         <div class="container-large">
-         social media links go here
+          <div class="footer-bottom-content">
+            <p>2016 &&copy; Copyright - Quotes PSD Templates. All rights reserved.</p>
+          </div>
+          <div class="footer-bottom-social">
+            <ul>
+              <li><a href="#" class="facebook"><img src="./img//social/facebook.png" alt="facebook icon"></a></li>
+              <li><a href="#" class="twitter"><img src="./img/social/twitter.png" alt="twitter icon"></a></li>
+              <li><a href="#" class="linkedin"><img src="./img/social/linkedin.png" alt="linkedin icon"></a></li>
+              <li><a href="#" class="youtube"><img src="./img/social/youtube.png" alt="youtube icon"></a></li>
+              <li><a href="#" class="google-plus"><img src="./img/social/google-plus.png" alt="google plus icon"></a></li>
+              <li><a href="#" class="pinterest"><img src="./img/social/pinterest.png" alt="pinterest icon"></a></li>
+              <li><a href="#" class="instagram"><img src="./img/social/instagram.png" alt="instagram icon"></a></li>
+              <li><a href="#" class="email"><img src="./img/social/email.png" alt="email icon"></a></li>
+            </ul>
+          </div>
         </div>
       </div>
     </footer>
