Add responsive style to section (footer bottom)

--- a/index.html
+++ b/index.html
@@ -222,20 +222,22 @@
       <div class="footer-bottom">
         <div class="container-large">
           <div class="footer-bottom-content">
-            <p>2016 &&copy; Copyright - Quotes PSD Templates. All rights reserved.</p>
-          </div>
-          <div class="footer-bottom-social">
-            <ul>
-              <li><a href="#" class="facebook"><img src="./img//social/facebook.png" alt="facebook icon"></a></li>
-              <li><a href="#" class="twitter"><img src="./img/social/twitter.png" alt="twitter icon"></a></li>
-              <li><a href="#" class="linkedin"><img src="./img/social/linkedin.png" alt="linkedin icon"></a></li>
-              <li><a href="#" class="youtube"><img src="./img/social/youtube.png" alt="youtube icon"></a></li>
-              <li><a href="#" class="google-plus"><img src="./img/social/google-plus.png" alt="google plus icon"></a></li>
-              <li><a href="#" class="pinterest"><img src="./img/social/pinterest.png" alt="pinterest icon"></a></li>
-              <li><a href="#" class="instagram"><img src="./img/social/instagram.png" alt="instagram icon"></a></li>
-              <li><a href="#" class="email"><img src="./img/social/email.png" alt="email icon"></a></li>
-            </ul>
-          </div>
+            <div class="footer-bottom-copyright">
+              <p class="footer-bottom-copyright-text">2016 &copy; Copyright - Quotes PSD Templates. All rights reserved.</p>
+            </div>
+            <div class="footer-bottom-social">
+              <ul class="footer-bottom-social-wrapper">
+                <li class="footer-bottom-social-link no-margin"><a href="#" class="facebook"><img class="footer-bottom-social-image" src="./img//social/facebook.png" alt="facebook icon"></a></li>
+                <li class="footer-bottom-social-link"><a href="#" class="twitter"><img class="footer-bottom-social-image" src="./img/social/twitter.png" alt="twitter icon"></a></li>
+                <li class="footer-bottom-social-link"><a href="#" class="linkedin"><img class="footer-bottom-social-image" src="./img/social/linkedin.png" alt="linkedin icon"></a></li>
+                <li class="footer-bottom-social-link"><a href="#" class="youtube"><img class="footer-bottom-social-image" src="./img/social/youtube.png" alt="youtube icon"></a></li>
+                <li class="footer-bottom-social-link"><a href="#" class="google-plus"><img class="footer-bottom-social-image" src="./img/social/google-plus.png" alt="google plus icon"></a></li>
+                <li class="footer-bottom-social-link"><a href="#" class="pinterest"><img class="footer-bottom-social-image" src="./img/social/pinterest.png" alt="pinterest icon"></a></li>
+                <li class="footer-bottom-social-link"><a href="#" class="instagram"><img class="footer-bottom-social-image" src="./img/social/instagram.png" alt="instagram icon"></a></li>
+                <li class="footer-bottom-social-link"><a href="#" class="email"><img class="footer-bottom-social-image" src="./img/social/email.png" alt="email icon"></a></li>
+              </ul>
+            </div>
+          </div>  
         </div>
       </div>
     </footer>
