--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </li>
       </ul>
       <div class="call-to-action call-to-action-center">
-        <button type="button" class="call-to-action-button js-quotes-movies-button">More Reasons</button>
+        <button type="button" class="call-to-action-button js-quotes-movies-button">More Quotes</button>
       </div>  
     </section>
     <!-- /section quotes-movies -->
